working on public APIs and function registration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,27 +36,17 @@ if(NOT TARGET logger_static)
     FetchContent_MakeAvailable(logger)
 endif()
 
-if(NOT xxhash_FOUND)
-    set(XXHASH_DEPS_DIR "${MIX_DEPS_DIR}")
-    FetchContent_Declare(xxhash
-        GIT_REPOSITORY "https://github.com/Cyan4973/xxHash.git"
-        GIT_TAG dev
-        SOURCE_DIR ${XXHASH_DEPS_DIR}/xxhash
-        BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/xxhash-build
-        SUBBUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/xxhash-subbuild)
-    FetchContent_MakeAvailable(xxhash)
-endif()
-
 # ----- targets ----- #
 
 set(__ASAN_FLAGS__ "-fsanitize=undefined -fsanitize=address -fno-omit-frame-pointer")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${__ASAN_FLAGS__}")
 unset(__ASAN_FLAGS__)
 
-file(GLOB MIX_SRC ${CMAKE_CURRENT_SOURCE_DIR}/mix/*.c ${xxhash_SOURCE_DIR}/xxhash.c)
+file(GLOB MIX_SRC ${CMAKE_CURRENT_SOURCE_DIR}/mix/*.c)
 add_library(mix_static STATIC ${MIX_SRC})
 target_include_directories(mix_static PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}
     ${xxhash_SOURCE_DIR})
 target_compile_features(mix_static PUBLIC cxx_std_11)
 target_link_libraries(mix_static PUBLIC cutils_static logger_static m)
@@ -64,3 +54,4 @@ target_link_libraries(mix_static PUBLIC cutils_static logger_static m)
 # ----- tests ----- #
 
 add_subdirectory(bison)
+add_subdirectory(tests)
