--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(lex_main lex_main.c)
-target_link_libraries(lex_main PRIVATE mix_static)
+add_executable(parse_main parse_main.c)
+target_link_libraries(parse_main PRIVATE mix_static)
