--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,19 +29,6 @@ macro(mix_import_git_dep name repo commit)
     FetchContent_MakeAvailable(${name})
 endmacro()
 
-if(NOT TARGET logger_static)
-    set(LOGGER_DEPS_DIR ${MIX_DEPS_DIR})
-    set(LOGGER_BUILD_TESTS OFF)
-    set(LOGGER_INSTALL ${MIX_INSTALL})
-    set(LOGGER_HOLD_DEPS ${MIX_HOLD_DEPS})
-    if(MIX_DEP_LOGGER_SOURCE_DIR)
-        add_subdirectory(${MIX_DEP_LOGGER_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/logger-build)
-        set(logger_SOURCE_DIR ${MIX_DEP_LOGGER_SOURCE_DIR})
-    else()
-        mix_import_git_dep(logger "https://github.com/ouonline/logger.git" master)
-    endif()
-endif()
-
 if(NOT TARGET cutils_static)
     set(CUTILS_DEPS_DIR ${MIX_DEPS_DIR})
     set(CUTILS_BUILD_TESTS OFF)
@@ -55,13 +42,26 @@ if(NOT TARGET cutils_static)
     endif()
 endif()
 
+if(NOT TARGET logger_static)
+    set(LOGGER_DEPS_DIR ${MIX_DEPS_DIR})
+    set(LOGGER_BUILD_TESTS OFF)
+    set(LOGGER_INSTALL ${MIX_INSTALL})
+    set(LOGGER_HOLD_DEPS ${MIX_HOLD_DEPS})
+    if(MIX_DEP_LOGGER_SOURCE_DIR)
+        add_subdirectory(${MIX_DEP_LOGGER_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/logger-build)
+        set(logger_SOURCE_DIR ${MIX_DEP_LOGGER_SOURCE_DIR})
+    else()
+        mix_import_git_dep(logger "https://github.com/ouonline/logger.git" master)
+    endif()
+endif()
+
 # ----- targets ----- #
 
 set(__ASAN_FLAGS__ "-fsanitize=undefined -fsanitize=address -fno-omit-frame-pointer")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${__ASAN_FLAGS__}")
 unset(__ASAN_FLAGS__)
 
-execute_process(COMMAND bison -d ${CMAKE_CURRENT_SOURCE_DIR}/bison/mix.y -Wcounterexamples)
+execute_process(COMMAND bison -d ${CMAKE_CURRENT_SOURCE_DIR}/bison/mix.y -o ${CMAKE_CURRENT_BINARY_DIR}/mix.tab.c -Wcounterexamples)
 
 file(GLOB __MIX_SRC__ ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c ${CMAKE_CURRENT_BINARY_DIR}/mix.tab.c)
 add_library(mix_static STATIC ${__MIX_SRC__})
